--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@iconify/json": "^2.1.3",
     "@intlify/vite-plugin-vue-i18n": "^3.3.0",
     "@types/node": "^17.0.18",
+    "@vitejs/plugin-legacy": "^1.7.1",
     "@vitejs/plugin-vue": "^2.2.2",
     "@vueuse/core": "^7.6.2",
     "pathe": "^0.2.0",
